SONARJAVA-4120 Logs about preview features should not suggest "-enable-preview"